[tool.poetry]
name = "bid_simulator"
version = "0.1.0"
description = ""
authors = ["Olof Beckman <olof@olofbeckman.se>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.5.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
